[package]
name = "hoppscotch-relay"
version = "0.1.1"
description = "A HTTP request-response relay used by Hoppscotch Desktop and Hoppscotch Agent for advanced request handling including custom headers, certificates, proxies, and local system integration."
authors = ["CuriousCorrelation"]
edition = "2021"

[dependencies]
curl = { git = "https://github.com/CuriousCorrelation/curl-rust.git", features = ["ntlm"] }
tokio-util = "0.7.12"
lazy_static = "1.5.0"
futures = "0.3.31"
chrono = { version = "0.4.38", features = ["serde"] }
bytes = "1.8.0"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
dashmap = "6.1.0"
tokio = { version = "1.41.1", features = ["full"] }
openssl = { version = "0.10.66", features = ["vendored"] }
foreign-types-shared = "0.3.1"
strum = { version = "0.26.3", features = ["derive"] }
once_cell = "1.20.2"
libc = "0.2.166"
form_urlencoded = "1.2.1"
# NOTE: This crate follows `openssl-sys` from https://github.com/CuriousCorrelation/curl-rust.git
# to avoid issues from version mismatch when compiling from source.
openssl-sys = { version = "0.9.64", features = ["vendored"] }
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "1.0.64"
http = "1.1.0"
url-escape = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
